--- a/style.scss
+++ b/style.scss
@@ -279,6 +279,10 @@ nav {
 }
 
 footer {
+  position:fixed;
+  left:0px;
+  bottom:0px;
+  width:100%;
   padding: 20px 0;
   text-align: center;
 }
